--- a/app/javascript/styles/mastodon-light/css_variables.scss
+++ b/app/javascript/styles/mastodon-light/css_variables.scss
@@ -39,6 +39,7 @@
     var(--color-text-brand)
   );
   --color-text-on-brand-base: var(--color-white);
+  --color-text-brand-on-inverted: var(--color-indigo-400);
   --color-text-error: var(--color-red-600);
   --color-text-on-error-base: var(--color-white);
   --color-text-warning: var(--color-yellow-600);
